src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompleteVariableDeclaration.xq
module namespace a = 'a';
declare variable $x := ;
declare variable $y :=
declare variable $z
declare variable
declare variable $a := 'a';